[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "scheduler-service"
version = "0.1.0"
description = "Scheduler microservice (FastAPI + APScheduler + SQLAlchemy)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "APScheduler>=3.10.4",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
]
